--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/>
 		<!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.cmb.ccc</groupId>
+	<groupId>bupt.edu</groupId>
 	<artifactId>ecommerce_order_system</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
